modify mytest module config

--- a/note/conf/vhost/test_module.conf
+++ b/note/conf/vhost/test_module.conf
@@ -4,5 +4,31 @@ server {
 
 	location / {
 		mytest;
+		test_flag on;
+		test_str apple;
+		test_num 10;
+		test_size 10k;
+		test_off 10g;
+		test_msec 1d;
+		test_sec 1d;
+		test_bufs 4 1k;
+		
+		test_enum banana;
+		test_bitmask best;
+		
+		test_access user:rw group:rw all:r;
+		test_path /usr/local/nginx 1 2 3;
+
+		test_str_array str_array_1;
+		test_str_array str_array_2;
+
+		test_keyval key_1 value_1;
+		test_keyval key_1 value_2;
+		test_keyval key_3 value_3;
+
+
+		diy_config jordan 23;
+		
+
         }
 } 
